--- a/src/06-layouts/_flex.scss
+++ b/src/06-layouts/_flex.scss
@@ -133,10 +133,8 @@
 							margin: 0;
 						}
 					}
-					> :not(br) {
-						&:not([class*="__m"]),
-						&[class*="__min"],
-						&[class*="__max"] {
+					> :not(br):not(.xm__m):not(.xm__margin):not([class*="__mX"]):not([class*="__mY"]) {
+						&:not([class*="__mT"]):not([class*="__mL"]):not([class*="__mB"]):not([class*="__mR"]) {
 							&[class*="__txtWr"]:not([class*="__flx"]),
 							&:not([class*="-wrap"]):not([class*="-reverse"]) {
 								margin-bottom: var(--g, 1rem);
